picturas-chart/templates/mailhog-service-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailhog-cluster
spec:
  type: ClusterIP
  ports:
    - port: 8025
      targetPort: 8025
  selector:
    name: mailhog
