picturas-chart/templates/mailhog-service-node.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailhog
spec:
  type: NodePort
  ports:
    - port: 1025
      targetPort: 1025
  selector:
    name: mailhog
