picturas-chart/templates/nfs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nfs
spec:
  type: ClusterIP
  ports:
    - port: 2049
      targetPort: 2049
  selector:
    name: nfs
