picturas-chart/templates/projects-ms-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: projects-ms
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    name: projects-ms
