picturas-chart/templates/subscriptions-ms-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: subscriptions-ms
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    name: subscriptions-ms
