picturas-chart/templates/users-ms-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-ms
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    name: users-ms
