picturas-chart/templates/ws-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ws-gateway
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    name: ws-gateway
