picturas-chart/templates/localstripe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: localstripe
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /localstripe
            pathType: Prefix
            backend:
              service:
                name: localstripe
                port:
                  number: 8420
