picturas-chart/templates/mailhog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailhog
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /mailhog
            pathType: Prefix
            backend:
              service:
                name: mailhog-cluster
                port:
                  number: 8025
