picturas-chart/templates/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
spec:
  rules:
    - http:
        paths:
          - path: /s3
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
