picturas-chart/templates/ws-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ws-gateway
spec:
  rules:
    - http:
        paths:
          - path: /api/ws
            pathType: Prefix
            backend:
              service:
                name: ws-gateway
                port:
                  number: 3000
